# j-pet-framework-examples

./: CMakeLists.txt
LargeBarrelAnalysis/: EventFinder.cpp  EventFinder.h  TimeWindowCreator.cpp  TimeWindowCreatorTools.cpp  TimeWindowCreatorTools.h
ModularDetectorAnalysis/: TimeWindowCreator.cpp  TimeWindowCreator.h
OPSAnalysis/: CMakeLists.txt  JPetOpsEvent.cpp  JPetOpsEvent.h  OPSAnalysisTools.cpp  OPSAnalysisTools.h  OPSAnalyzer.cpp  OPSAnalyzer.h  OPSCandidateFinder.cpp  OPSCandidateFinder.h  OPSFinder.cpp  OPSReconstructor.cpp  OPSReconstructor.h  TOTLoader.h  main.cpp
OPSFullAnalysis/: CMakeLists.txt  OPSFinder.h  TOTLoader.cpp  main.cpp
OPSPreselection/: CMakeLists.txt  EventFinder.cpp  SignalsAndHits.cpp.hidden  SignalsAndHits.h.hidden  TOTPlotter.cpp  TOTPlotter.h  main.cpp
OPSSelection/: CMakeLists.txt  EventFinder.cpp
RefDet/: TimeWindowCreator.cpp  TimeWindowCreator.h
